# ffmpeg_cpp

./: .gitmodules  CMakeLists.txt  README.md  curl_reader.cpp  curl_reader.h  data_types.h  demo.cpp  filter.cpp  main.cpp  read_video.cpp
binding/: CMakeLists.txt  main.cpp  main.py
cmake/: FindLibmemcached.cmake
include/: data_types.h  video_reader.h
src/: video_reader.cpp
